# olx_project

./: .env.example  TODO  manage.py  pyproject.toml
apps/: admin.py  apps.py  managers.py  models.py  urls.py  views.py
apps/models/: __init__.py  announcement.py  category.py  categorys.py  product.py  user.py  users.py
olx_project/: asgi.py  settings.py  urls.py  wsgi.py
root/: settings.py  urls.py
templates/apps/: main-page.html
